# AdventOfCode

./: .gitignore  README.md  day1.hs
2016/day1/: day1.go
2016/day10/: day10.go
2016/day11/: day11.go
2016/day13/: day13.go
2016/day14/: day14
2016/day15/: day15input
2016/day16/: day16.go
2016/day19/: day19.go
2016/day2/: day2.go
2016/day20/: day20.go
2016/day21/: day21.go
2016/day22/: day22.go
2016/day23/: day23.go
2016/day4/: day4.go
2016/day7/: day7.go
2016/day9/: day9.go
2017/: build.gradle  settings.gradle
2017/input/: day1input
2019/: .gitignore  2019  CMakeLists.txt  main.cpp
2019/inputs/: day1
2019/src/: day0.h  day1.h  day10.h  day11.h  day12.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h  intcode.h  position.h
2019/tests/: CMakeLists.txt  day12_test.cpp  day1_tests.cpp  day2_test.cpp  day3_test.cpp  day4_test.cpp  day5_test.cpp  day6_test.cpp  day6_test_input  day7_test.cpp  intcode_test.cpp
2020/: LICENSE  Manifest.toml  Project.toml
2020/inputs/: day4
2020/src/: AdventOfCode2020.jl  InputHelper.jl  day0.jl  day1.jl  day10.jl  day11.jl  day12.jl  day13.jl  day14.jl  (+13 more)
aoc-2018/: Cargo.toml
aoc-2021/: LICENSE  Project.toml
aoc-2022/: Cargo.toml
aoc-2023/: Day1.roc  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  main.roc
aoc-2024/: .gitignore  build.zig  build.zig.zon
day1/: day1.go
day11/: day11input
day12/: day12.go
day14/: day14.go
day15/: day15.go
day17/: day17.go
day18/: day18.go
day20/: day20
day3/: day3.go
day5/: day5.go
day6/: day6.go
day8/: day8.go
(+108 files in other folders)
